test load config

--- a/settings-example.ini
+++ b/settings-example.ini
@@ -313,6 +313,14 @@ permitted_subnets = 172.16.0.0/12, 10.0.0.0/8, 192.168.0.0/16, fd00::/8
 # If the device has a tenant then this one will be used. If not, the prefix tenant will be used if defined
 #ip_tenant_inheritance_order = device, prefix
 
+
+[source/vcloud_director-example]
+type = vcloud_director
+vcloud_url = https://tenant.provider-domain.org/tenant-id
+username = netBoxImport
+password = secrets
+permitted_subnets = 172.16.0.0/12, 10.0.0.0/8, 192.168.0.0/16, fd00::/8
+
 [source/my-redfish-example]
 
 # Defines if this source is enabled or not
